--- a/Systemesolaire/html/index.html
+++ b/Systemesolaire/html/index.html
@@ -15,13 +15,13 @@
 
     <nav>
         <ul class="nav-list">
-            <li><a href="#" onclick="loadPage('solar_system.html')">Solar System</a></li>
-            <li><a href="#" onclick="loadPage('sun.html')">Sun</a></li>
-            <li><a href="#" onclick="loadPage('earth.html')">Earth</a></li>
+            <li><a href="#" onclick="loadPage('solar_system.html')">النظام الشمسي</a></li>
+            <li><a href="#" onclick="loadPage('sun.html')">الشمس</a></li>
+            <li><a href="#" onclick="loadPage('earth.html')">الأرض</a></li>
             <li><a href="#" onclick="loadPage('mars.html')">Mars</a></li>
-            <li><a href="#" onclick="loadPage('outer_planets.html')">Outer Planets</a></li>
-            <li><a href="#" onclick="loadPage('inner_planets.html')">Inner Planets</a></li>
-            <li><a href="#" onclick="loadPage('moon.html')">Moon</a></li>
+            <li><a href="#" onclick="loadPage('outer_planets.html')">الكواكب الخارجية</a></li>
+            <li><a href="#" onclick="loadPage('inner_planets.html')">الكواكب الداخلية</a></li>
+            <li><a href="#" onclick="loadPage('moon.html')">القمر</a></li>
         </ul>
     </nav>
 
