--- a/Systemesolaire/html/index.html
+++ b/Systemesolaire/html/index.html
@@ -18,7 +18,7 @@
             <li><a href="#" onclick="loadPage('solar_system.html')">النظام الشمسي</a></li>
             <li><a href="#" onclick="loadPage('sun.html')">الشمس</a></li>
             <li><a href="#" onclick="loadPage('earth.html')">الأرض</a></li>
-            <li><a href="#" onclick="loadPage('mars.html')">Mars</a></li>
+            <li><a href="#" onclick="loadPage('mars.html')">المريخ</a></li>
             <li><a href="#" onclick="loadPage('outer_planets.html')">الكواكب الخارجية</a></li>
             <li><a href="#" onclick="loadPage('inner_planets.html')">الكواكب الداخلية</a></li>
             <li><a href="#" onclick="loadPage('moon.html')">القمر</a></li>
