--- a/Systemesolaire/html/index.html
+++ b/Systemesolaire/html/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p class="programmer">تمت البرمجة بواسطة <strong>AHMED MAATOUG TI14</strong></p>
+        <p class="programmer">تمت البرمجة بواسطة <strong>AHMED MAATOUG </strong></p>
     </footer>
 
     <script>
@@ -50,4 +50,5 @@
     </script>
 </body>
 </html>
+
 
