--- a/SystemeSolaire/html/index.html
+++ b/SystemeSolaire/html/index.html
@@ -69,7 +69,8 @@
     </section>
 
     <footer>
-        <p class="programmer">تمت البرمجة بواسطة <strong>AHMED MAATOUG TI14</strong></p>
+        <p class="programmer">تمت البرمجة بواسطة <strong>AHMED MAATOUG</strong></p>
     </footer>
 </body>
 </html>
+
